feat(monitoring and logging): implementation of prometheus, grafana and elk
